--- a/css/menu.css
+++ b/css/menu.css
@@ -64,5 +64,5 @@
 }
 
 .bottom .settings:hover {
-  color: #9398b5;
+  color: #999ebc;
 }
