--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
